--- a/package.json
+++ b/package.json
@@ -6,20 +6,26 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "user:add": "node scripts/create-user.mjs"
   },
   "dependencies": {
-    "next": "16.0.3",
-    "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "@next/swc-darwin-arm64": "^15.5.6",
+    "bcryptjs": "^2.4.3",
+    "jspdf": "^3.0.4",
+    "next": "15.5.6",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "16.0.3",
+    "eslint-config-next": "15.5.6",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
